Update html, css, js files to adhere with new webpack configs

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
-<head>
+  <head>
     <title>InnoVAtor</title>
-</head>
-<body>
-<script src="dist/bundle.js"></script>
-</body>
+  </head>
+  <body>
+    <h1 id="test">Testing hot reload and styles</h1>
+  </body>
 </html>
