initial html structure

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <title>InnoVAtor</title>
   </head>
   <body>
-    <h1 id="test">Testing hot reload and styles</h1>
+    <div class="container">
+      <section class="left_container">
+        <div class="logoDiv">
+          <img src="./src/assets/MixLogo_1x.png" alt="Innovation Logo">
+        </div>
+        <h1>Ticket Container</h1>
+      </section>
+      <section class="right_container">
+        <h1>Chat</h1>
+      </section>
+    </div>
   </body>
 </html>
