Update configs to include copy-webpack-plugin for assets

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="container">
       <section class="left_container">
         <div class="logoDiv">
-          <img src="./src/assets/MixLogo_1x.png" alt="Innovation Logo">
+          <img src="./assets/MixLogo_1x.png" alt="Innovation Logo">
         </div>
         <h1>Ticket Container</h1>
       </section>
