--- a/index.html
+++ b/index.html
@@ -2,17 +2,27 @@
 <html>
   <head>
     <title>InnoVAtor</title>
+    <link href="http://allfont.net/allfont.css?fonts=cicle-gordita" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
       <section class="left_container">
         <div class="logoDiv">
-          <img src="./src/assets/MixLogo_1x.png" alt="Innovation Logo">
+          <img class="logo" src="/assets/MixLogo_1x.png" alt="Innovation Logo">
         </div>
-        <h1>Ticket Container</h1>
+        <div class="ticket_container">
+          <div class="section_header">
+            <div class="title">Jemma's Assigned Tickets</div>
+          </div>
+          <div class="ticket_body">
+            Body
+          </div>
+        </div>
       </section>
       <section class="right_container">
-        <h1>Chat</h1>
+        <div class="section_header" id="chat_header">
+          <div class="title">ASK</div>
+        </div>
       </section>
     </div>
   </body>
