added input field chat

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <div class="section_header" id="chat_header">
           <div class="title">ASK</div>
         </div>
+        <div class='input-group'>
+          <form action="/" class="form_group">
+            <input type="text" id="fname" placeholder="Type your question here">
+
+            <input type="submit" value="Submit">
+          </form>
+        </div>
       </section>
     </div>
   </body>
