--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="ticket_body">
             <table class="ticket_table">
               <tr>
-                <th>Key</th>
+                <th>Key #</th>
                 <th>Summary</th> 
                 <th>Status</th>
                 <th>Hours Logged</th> 
@@ -27,7 +27,7 @@
             <button class="accordion">
               <table class="ticket_table">
                 <tr>
-                  <th>#01</th>
+                  <th>1</th>
                   <th>Mix.Hacks -- Create NLU Api</th> 
                   <th>In Progress</th>
                   <th>160</th> 
