--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <form action="/" class="form_group">
             <input type="text" id="fname" placeholder="Type your question here">
 
-            <input type="submit" value="SUBMIT" alt="Submit Button">
+            <input type="submit" value="SEND" alt="Submit Button">
           </form>
         </div>
       </section>
