moved accordion logic in index.js, attempted to populate accordion with dummy data

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               <tr>
                 <th>Key #</th>
                 <th>Summary</th> 
+                <th>Assignee</th>
                 <th>Status</th>
                 <th>Hours Logged</th> 
                 <th>Priority</th>                
@@ -28,7 +29,8 @@
               <table class="ticket_table">
                 <tr>
                   <th>1</th>
-                  <th>Mix.Hacks -- Create NLU Api</th> 
+                  <th>Mix.Hacks -- Create NLU Api</th>
+                  <th>Jemma Tiongson</th> 
                   <th>In Progress</th>
                   <th>160</th> 
                   <th>High</th>                
@@ -36,7 +38,7 @@
               </table>
             </button>
             <div class="panel">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             </div>
           </div>
         </div>
@@ -54,21 +56,5 @@
         </div>
       </section>
     </div>
-    <script>
-    var acc = document.getElementsByClassName("accordion");
-    var i;
-
-    for (i = 0; i < acc.length; i++) {
-      acc[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var panel = this.nextElementSibling;
-        if (panel.style.maxHeight) {
-          panel.style.maxHeight = null;
-        } else {
-          panel.style.maxHeight = panel.scrollHeight + "px";
-        } 
-      });
-    }
-    </script>
   </body>
 </html>
