Updating accordion logic

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>InnoVAtor</title>
-    <link href="http://allfont.net/allfont.css?fonts=cicle-gordita" rel="stylesheet" type="text/css" />
+    <!-- <link href="http://allfont.net/allfont.css?fonts=cicle-gordita" rel="stylesheet" type="text/css" /> -->
   </head>
   <body>
     <div class="container">
@@ -25,7 +25,7 @@
                 <th>Priority</th>                
               </tr>
             </table>
-            <button class="accordion">
+            <!-- <button class="accordion">
               <table class="ticket_table">
                 <tr>
                   <th>1</th>
@@ -39,7 +39,7 @@
             </button>
             <div class="panel">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
