--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="ticket_container">
           <div class="section_header">
-            <div class="title">JEMMA'S ASSIGNED TICKETS</div>
+            <div class="title">DaLarm'S ASSIGNED TICKETS</div>
           </div>
           <div class="ticket_body">
             <table class="ticket_table">
